
      - Fixed bug in XML export (to_xml()) of Link objects, escaping 
        (entitizing) title and url properly now.

      - Removed quote (probably typo) from some JS string in lookupwindowfield.

      - There was a bug in the cleanup script listed in MAINTENANCE.txt,
        fixed.

      - Shut up a security deprecation warning for PROPFIND.

    Ported from 1.5 branch

      - User settings screen did not work when user did not have
        sufficient rights in the Silva Root. This is now fixed.

      - Fixed problem in SilvaDocument that used kupu where it whasn't
        needed and caused js exceptions
    
      - Fix for issue 1618 where messagebox didn't appear in ie also
        removed nbsp in macro_index

      - Fixed issues where hide_from_toc filters wouldn't work in
        ghost contexts.  Also removed some unused cruft from previous
        filtering implementations.
    
      - Added a ReferenceLookupWindowField, to store references to zope
        objects instead of urls.
    
      - Fixed issue 1608 where tab_edit_revoke_approval caused
        versioning errors

      - In the tab_status "set timings" caused an error without saving
        the changes and returned a wrong tab
    
      - XML export rewrote the urls of links and images on export, which
        was a bad thing. They now have extra rewritten_ attributes, which
        are only used by the xslt rendering.      

      - XML export of Silvadocuments with images that have no link attribute
        was broken.

      - The full media export now uses a tempfile instead of an in memory 
        stringIO to build the zipfile, hopefully improving memory
        footprint.

      - Added an extra note on zope.i18n.translate to
        doc/developer_changes.txt.

      - Ghostfolders exported haunted content, which broke asset ids in the
        zip. Since this content was ignored on import it is no longer 
        exported.
